# Jerry-s-Game

./: pyproject.toml
.github/workflows/: linters.yml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
