[tool.poetry]
name = "jerry-s-game"
version = "0.1.0"
description = ""
authors = ["Alexander <testmail>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
flake8 = "^6.1.0"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
